Add animation when title is clicked

--- a/src/app/components/title/title.scss
+++ b/src/app/components/title/title.scss
@@ -6,4 +6,9 @@
     transition: transform 0.2s;
     transform: scale(1.2);
   }
+
+  &:active {
+    transition: transform 0.2s;
+    transform: scale(1.267);
+  }
 }
