Use variables instead of text for title

--- a/src/app/components/title/title.html
+++ b/src/app/components/title/title.html
@@ -1,1 +1,1 @@
-<h3 id="welcome">Hi, i'm <strong id="name">sxlphuric</strong></h3>
+<h3 id="welcome">{{title}}<strong id="name">{{boldtitle}}</strong></h3>
