Make it use the same image from Lorem Picsum

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -2,7 +2,7 @@
   <app-title></app-title>
   <div class="col align-middle">
     <img
-      src="https://picsum.photos/380"
+      src="https://picsum.photos/seed/wow/380"
       alt="random image from picsum.photos"
     />
     <p>
