change image alternate text because i use the same image

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -3,7 +3,7 @@
   <div class="col align-middle">
     <img
       src="https://picsum.photos/seed/wow/380"
-      alt="random image from picsum.photos"
+      alt="cool looking mountain with fog and a road"
     />
     <p>
       I like doing random stuff, because I can.
