Move the buttons into their own component

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -10,10 +10,6 @@
       <br />
       Yeah. That's kinda it.
     </p>
-    <div class="row flex-spaces child-borders">
-      <a href="#" class="paper-btn">Stuff</a>
-      <a href="#" class="paper-btn">Socials</a>
-      <a href="javascript:void(0);" class="paper-btn disabled">Blog</a>
-    </div>
+    <app-link-buttons />
   </div>
 </div>
