Make the component links look better

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -1,5 +1,5 @@
 <div id="main">
-  <app-title></app-title>
+  <app-title />
   <div class="col align-middle">
     <img
       src="https://picsum.photos/seed/wow/380"
