--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,3 @@
-<!--app-nav></app-nav-->
-<app-main></app-main>
-<!---app-footer></app-footer--->
+<!--app-nav /-->
+<app-main />
+<!---app-footer /--->
